Simplify code
RISDEV-3826